--- a/totalhr.web/areas/Admin/Views/FormEditor/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/FormEditor/Index.cshtml
@@ -99,7 +99,7 @@
 
 <div class="row-fluid">
     <p>
-        <button class="btn btn-warning" onclick="OpenPopup('/Admin/FormEditor/CreateForm/1', 1000, 700);">
+        <button class="btn btn-warning" onclick="OpenPopup('/Admin/FormEditor/CreateForm/@((int)Variables.FormType.ContractTemplate)', 1000, 700);">
             <i class="icon-plus icon-white"></i> @Contract.V_Create_Form
         </button>
     </p>
