--- a/totalhr.web/Views/Chat/CreateRoom.cshtml
+++ b/totalhr.web/Views/Chat/CreateRoom.cshtml
@@ -1,6 +1,7 @@
 ﻿@using totalhr.Resources;
 @using totalhr.web.Areas.Admin.Helpers;
 @using totalhr.web.Areas.Admin.Models;
+@using totalhr.Shared;
 
 @model totalhr.web.Models.ChatRoomViewModel
 
@@ -42,11 +43,12 @@
                 {
                      @Html.ValidationSummary()
                      @Html.HiddenFor(x => x.Target) 
-                    
+                     @Html.HiddenFor(x => x.InvitedUserIds)
+
                     <div class="control-group">
                         <label class="control-label">@Common.V_ChatRoom_Name</label>
                         <div class="controls">
-                            <input type="text" name="RoomName" placeholder=".input-large" class="input-large" />
+                            <input type="text" name="RoomName" placeholder="Chat Room Name" class="input-large" />
                             <span class="help-inline">&nbsp;</span>
                         </div>
                     </div>
@@ -61,7 +63,7 @@
                         <label class="control-label">@Common.V_ChatRoom_Target</label>
                         <div class="controls">
                             <label class="radio line">
-                                <input type="radio" name="optionsRadios2" value="1" onclick="SetCtrlValue(this)" />
+                                <input type="radio" name="optionsRadios2" value="@((int)Variables.ChatRoomTarget.Private)" onclick="SetCtrlValue(this)" />
                                 @Common.V_ChatRoom_Private
                             </label>
                             <label id="lbInvitedUsers" class="control-label" style="display:none">
@@ -69,17 +71,36 @@
                                 <span id="spInvitedUsers"></span>
                             </label>
                             <label class="radio line">
-                                <input type="radio" name="optionsRadios2" value="2" checked="checked" onclick="SetCtrlValue(this)" />
+                                <input type="radio" name="optionsRadios2" value="@((int)Variables.ChatRoomTarget.Public)" checked="checked" onclick="SetCtrlValue(this)" />
                                 @Common.V_ChatRoom_Public
                             </label>
                         </div>
                     </div>
        
                     <div class="form-actions">
-                        <button type="submit" class="btn blue"><i class="icon-ok"></i> @Common.V_Save</button>
-                        <button type="button" class="btn red"><i class=" icon-remove"></i> @Common.V_Cancel</button>
+                        <button type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> @Common.V_Save</button>
+                        <button type="button" class="btn btn-danger"><i class="icon-remove icon-white"></i> @Common.V_Cancel</button>
                     </div>
                 }
                 <!-- END FORM-->
             </div>
-        </div>        </div>    </div>
+        </div>        </div>    </div><script type="text/javascript">
+    var target = @((int)Variables.ChatRoomTarget.Private);
+
+    function SetCtrlValue(obj){
+        var selval = $("input[name=optionsRadios2]:checked").val();
+        $('#Target').val(selval);
+
+        if (selval == target) {
+            LaunchUserSelectDialog();
+        }
+    }
+
+    function LaunchUserSelectDialog() {
+        OpenPopup('/Account/GetCompanyUserSimple/', 700, 600);
+    }
+
+    function PickUsers(lst) {
+        alert(lst);
+    }
+</script>
