--- a/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
@@ -1,4 +1,5 @@
 ﻿ @using totalhr.Resources;
+@using totalhr.Shared;
 
 <ul class="sidebar-menu">
 
@@ -114,7 +115,11 @@
         </a>
         <ul class="sub">
             <li><a class="" href="/Admin/FormEditor/"> @AdminGeneric.V_View_Forms</a></li>
-            <li><a class="" href="/Admin/FormEditor/CreateForm/"> @AdminGeneric.V_Create_Form</a></li>
+            <li>
+                <a href="#" onclick="OpenPopup('/Admin/FormEditor/CreateForm/@((int)Variables.FormType.ContractTemplate)', 1000, 700);"> 
+                    @AdminGeneric.V_Create_Form
+                </a>
+            </li>
         </ul>
     </li>    
    
@@ -124,10 +129,9 @@
             <span class="arrow"></span>
         </a>
         <ul class="sub">
-            <li><a class="" href="maps_google.html"> Option 1</a></li>
-            <li><a class="" href="maps_vector.html"> Option 2</a></li>
+            <li><a href="/Admin/TimeRecording/Search"> @AdminGeneric.V_Time_Recording_Search</a></li>
+            <li><a href="/Admin/TimeRecording/RecordTime"> @AdminGeneric.V_Time_Recording_Record</a></li>
         </ul>
     </li> 
-
-    <li><a class="" href="/Account/Logout"><span class="icon-box"><i class="icon-user"></i></span> @AdminGeneric.V_Loggout</a></li>
+   
 </ul>
