work on chat system

--- a/totalhr.web/Views/Account/UserListSelector.cshtml
+++ b/totalhr.web/Views/Account/UserListSelector.cshtml
@@ -47,6 +47,7 @@
         }
         if (parent != null) {
             parent.PickUsers(allinvitees, allinviteeNames);
+            parent.ClosePopup('dvPopup');
         }
     }
 </script>
