--- a/totalhr.web/Views/Chat/CreateRoom.cshtml
+++ b/totalhr.web/Views/Chat/CreateRoom.cshtml
@@ -1,9 +1,10 @@
 ﻿@using totalhr.Resources;
 @using totalhr.web.Areas.Admin.Helpers;
 @using totalhr.web.Areas.Admin.Models;
+@using totalhr.Shared.Models;
 @using totalhr.Shared;
 
-@model totalhr.web.Models.ChatRoomViewModel
+@model ChatRoomInfo
 
 @{
     ViewBag.Title = Common.V_Chat_Room_Create;
