--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -124,8 +124,8 @@
             <span class="arrow"></span>
         </a>
         <ul class="sub">
-            <li><a class="" href="maps_google.html"> Structure</a></li>
-            <li><a class="" href="maps_vector.html"> Image Gallery</a></li>
+            <li><a class="" href="/Admin/Structure/"> Structure</a></li>
+            <li><a class="" href="/Admin/Gallery/"> Image Gallery</a></li>
         </ul>
      </li> 
     
