site menu changes.

--- a/totalhr.web/Views/Account/Index.cshtml
+++ b/totalhr.web/Views/Account/Index.cshtml
@@ -35,7 +35,7 @@
 </div>
 <div class="square-state">
     <div class="row-fluid">
-        <a class="icon-btn span2" href="/Account/MyDetails">
+        <a class="icon-btn span2" href="/Account/MyDetails/">
             <i class="icon-group"></i>
             <div>@Account.V_My_Profile</div>
         </a>
@@ -48,15 +48,66 @@
             </a>
          }
 
-         <a class="icon-btn span2" href="/Document/">
+        <a class="icon-btn span2" href="/Document/">
             <i class="icon-group"></i>
             <div>@Account.V_Documents</div>
+        </a>
+        
+         <a class="icon-btn span2" href="/Payroll/">
+            <i class="icon-group"></i>
+            <div>@Account.V_Payroll</div>
+        </a>
+        
+        <a class="icon-btn span2" href="/Task/">
+            <i class="icon-group"></i>
+            <div>@Account.V_Tasks</div>
+        </a>
+        
+        <a class="icon-btn span2" href="/Contract/">
+            <i class="icon-group"></i>
+            <div>@Account.V_My_Contract</div>
+        </a>
+        
+        <a class="icon-btn span2" href="/Account/Profiles/">
+            <i class="icon-group"></i>
+            <div>@Account.V_My_Profiles</div>
+        </a>
+        
+        <a class="icon-btn span2" href="/Absence/">
+            <i class="icon-group"></i>
+            <div>@Account.V_My_Absences</div>
+        </a>
+        <a class="icon-btn span2" href="/Communication/">
+            <i class="icon-group"></i>
+            <div> @AdminGeneric.V_Communications</div>
+        </a>
+
+        <a class="icon-btn span2" href="/Company/Employees/">
+            <i class="icon-group"></i>
+            <div> @Account.V_Employee_Directory</div>
+        </a>
+        <a class="icon-btn span2" href="/Company/Departments/">
+            <i class="icon-group"></i>
+            <div>@Account.V_Departments</div>
+        </a>
+        <a class="icon-btn span2" href="/Company/Structure/">
+            <i class="icon-group"></i>
+            <div>@Account.V_Structure</div>
+        </a>
+        <a class="icon-btn span2" href="/Company/Gallery/">
+            <i class="icon-group"></i>
+            <div>@Account.V_Image_Gallery</div>
+        </a>
+         <a class="icon-btn span2" href=/TimeRecording/">
+            <i class="icon-group"></i>
+            <div>@AdminGeneric.V_Time_Recording</div>
         </a>
     </div>
  </div>
 
- 
   
+
+
 
     
 
