--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -24,7 +24,7 @@
         </a>
     </li>  
      <li>
-        <a class="" href="/Account/Profiles">
+        <a class="" href="/Contract/">
             <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_My_Contract
         </a>
     </li>  
@@ -102,7 +102,7 @@
             <span class="arrow"></span>
         </a>
         <ul class="sub">
-            <li><a class="" href=/TimeRecording/"> @Account.V_Record_Time</a></li>
+            <li><a class="" href="/TimeRecording/"> @Account.V_Record_Time</a></li>
             <li><a class="" href="/TimeRecording/"> @Account.V_Search_For_Recording</a></li>
         </ul>
     </li> 
